# UniBot_Telegram_Rework

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt
modules/: browser_selenium.py  button_click.py  email_parser.py  exceptions.py  file_downloader.py  files_parser.py  hdrezka.py  logger.py  message_files_collector.py  schedule_parser.py  sqlite.py
unibot/: Dockerfile  README.md  pyproject.toml  requirements.txt
unibot/project/: .env.example  __main__.py
unibot/project/modules/: button_click.py  email_parser.py  files_parser.py  hdrezka.py  message_files_collector.py  schedule_parser.py  sqlite.py
